<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/category_notifications">

        <SwitchPreferenceCompat
            app:key="notification_enabled"
            app:title="@string/enable_notifications_title"
            app:summary="@string/enable_notifications_summary"
            app:defaultValue="true" />

        <EditTextPreference
            app:key="notification_days"
            app:title="@string/notification_days_title"
            app:summary="@string/notification_days_summary"
            app:defaultValue="3"
            app:dependency="notification_enabled" />

        <EditTextPreference
            app:key="notification_time"
            app:title="@string/notification_time_title"
            app:summary="@string/notification_time_summary"
            app:defaultValue="0900"
            app:dependency="notification_enabled" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/category_application">

        <ListPreference
            app:key="app_language"
            app:title="@string/language_title"
            app:summary="@string/language_summary"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:defaultValue="system" />

    </PreferenceCategory>

</PreferenceScreen>