<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_products"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_theme"
        android:title="@string/change_theme"
        app:showAsAction="never">
        <menu>
            <group
                android:id="@+id/group_theme"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/theme_light"
                    android:title="@string/theme_light" />
                <item
                    android:id="@+id/theme_dark"
                    android:title="@string/theme_dark" />
                <item
                    android:id="@+id/theme_system"
                    android:title="@string/theme_system" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort_24"
        android:title="@string/sort"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/sort_all"
                android:title="@string/sort_all" />
            <item
                android:id="@+id/sort_dry"
                android:title="@string/sort_dry" />
            <item
                android:id="@+id/sort_wet"
                android:title="@string/sort_wet" />
            <item
                android:id="@+id/sort_frozen"
                android:title="@string/sort_frozen" />
        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>